# serializer version: 1
# name: test_auth_and_cookies_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/cookies": {
        "get": {
          "operationId": "getApiCookies",
          "parameters": [
            {
              "description": "Cookies metadata",
              "deprecated": false,
              "name": "session_id",
              "in": "cookie",
              "schema": {
                "type": "string",
                "title": "Session Id"
              },
              "required": true
            },
            {
              "description": "Override",
              "deprecated": false,
              "name": "CSRF",
              "in": "cookie",
              "schema": {
                "type": "string",
                "title": "Csrf",
                "description": "Override"
              },
              "required": true
            },
            {
              "deprecated": false,
              "style": "deepObject",
              "explode": true,
              "name": "query",
              "in": "query",
              "schema": {
                "type": "string",
                "title": "Query"
              },
              "required": true
            }
          ],
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "401": {
              "description": "Raised when auth was not successful",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false,
          "security": [
            {
              "jwt": []
            }
          ]
        }
      }
    },
    "components": {
      "schemas": {
        "_CookieModel": {
          "properties": {
            "session_id": {
              "type": "string",
              "title": "Session Id"
            },
            "CSRF": {
              "type": "string",
              "title": "Csrf",
              "description": "Override"
            }
          },
          "type": "object",
          "required": [
            "session_id",
            "CSRF"
          ],
          "title": "_CookieModel"
        },
        "_QueryModel": {
          "properties": {
            "query": {
              "type": "string",
              "title": "Query"
            }
          },
          "type": "object",
          "required": [
            "query"
          ],
          "title": "_QueryModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {
        "jwt": {
          "type": "http",
          "description": "JWT token auth",
          "scheme": "Bearer",
          "bearerFormat": "JWT"
        }
      }
    }
  }
  '''
# ---
# name: test_body_and_file_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file": {
        "post": {
          "operationId": "postFile",
          "requestBody": {
            "content": {
              "multipart/form-data": {
                "schema": {
                  "allOf": [
                    {
                      "properties": {
                        "file_name1": {
                          "type": "string",
                          "format": "binary"
                        },
                        "second_file": {
                          "type": "string",
                          "format": "binary"
                        }
                      },
                      "type": "object",
                      "required": [
                        "file_name1",
                        "second_file"
                      ],
                      "title": "_SeveralFiles",
                      "description": "Model docs."
                    },
                    {
                      "$ref": "#/components/schemas/_DescriptionModel"
                    }
                  ]
                }
              }
            },
            "description": "Description from doc. Model docs.",
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_DescriptionModel": {
          "properties": {
            "first": {
              "type": "string",
              "title": "First"
            },
            "second": {
              "items": {
                "type": "integer"
              },
              "type": "array",
              "title": "Second"
            }
          },
          "type": "object",
          "required": [
            "first",
            "second"
          ],
          "title": "_DescriptionModel",
          "description": "Description from doc."
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_conditional_types
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/types": {
        "post": {
          "operationId": "postApiTypes",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/CustomUserModel"
                }
              },
              "application/xml": {
                "schema": {
                  "$ref": "#/components/schemas/_XmlModel"
                }
              }
            },
            "required": true
          },
          "responses": {
            "409": {
              "description": "Conflict",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "string"
                  }
                }
              }
            },
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/CustomUserModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/_XmlResponseModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_UserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "_XmlModel": {
          "properties": {
            "xml_value": {
              "type": "integer",
              "title": "Xml Value"
            }
          },
          "type": "object",
          "required": [
            "xml_value"
          ],
          "title": "_XmlModel"
        },
        "CustomUserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "_XmlResponseModel": {
          "properties": {
            "xml_response": {
              "type": "string",
              "title": "Xml Response"
            }
          },
          "type": "object",
          "required": [
            "xml_response"
          ],
          "title": "_XmlResponseModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_file_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file": {
        "get": {
          "operationId": "file_test_id",
          "requestBody": {
            "content": {
              "multipart/form-data": {
                "schema": {
                  "properties": {
                    "file_name1": {
                      "type": "string",
                      "format": "binary"
                    },
                    "second_file": {
                      "type": "string",
                      "format": "binary"
                    }
                  },
                  "type": "object",
                  "required": [
                    "file_name1",
                    "second_file"
                  ],
                  "title": "_SeveralFiles",
                  "description": "Model docs."
                }
              }
            },
            "description": "Model docs.",
            "required": true
          },
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": true
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_user_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/user": {
        "post": {
          "operationId": "postApiV1User",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": {
                    "type": "integer"
                  },
                  "type": "object"
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/CustomUserModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "CustomUserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
